--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -5,6 +5,7 @@
 
 <div class="container">
     <div class="row">
+        @*row with title and NEW:button modal*@
         <div class="col-sm-12">
             <h1>Customers</h1>
             @*---------------------------------------------------------------------------------*@
@@ -76,7 +77,7 @@
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                            <button type="button" class="btn btn-primary">Create</button>
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
@@ -85,6 +86,7 @@
         </div>
     </div>
 
+    @*line break*@
     <div class="row">
         <div class="col">
             <hr>
@@ -120,6 +122,7 @@
                             Last Name
                         </td>
                         <td>
+                        @*column with the buttons*@
                             <div class="btn-group" role="group" aria-label="Basic example">
                                 @*---------------------------------------------------------------------------------*@
                                 <!-- EDIT: Button trigger modal -->
@@ -218,6 +221,11 @@
                                                             <label for="inputCustomerID">Customer ID</label>
                                                             <input type="text" class="form-control" id="inputCustomerID" disabled>
                                                         </div>
+                                                        <div class="col-md-6 text-right">
+                                                            <button type="button" class="btn btn-light" style="background-color:transparent">
+                                                                <i class="far fa-edit"></i>Edit
+                                                            </button>
+                                                        </div>
                                                     </div>
                                                     <div class="form-row">
                                                         <div class="form-group col-md-6">
@@ -296,6 +304,10 @@
                                     </div>
                                 </div>
                                 @*---------------------------------------------------------------------------------*@
+                                @*Order history detail button*@
+                                <a class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" asp-controller="profile">
+                                    <i class="fas fa-list-ul"></i>
+                                </a>
                             </div>
                         </td>
                 </tbody>
