--- a/Deckel-Shop/Views/Profile/Customer/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/Index.cshtml
@@ -16,7 +16,7 @@
         <a class="nav-link" asp-action="CustomerOrderHistory" >Order History</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="~/Identity/Account/Manage/">Manage account</a>
     </li>
     <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
