--- a/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
@@ -17,7 +17,7 @@
         <a class="nav-link active" asp-action="CustomerOrderHistory" >Order History</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="~/Identity/Account/Manage/">Manage account</a>
     </li>
     <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
@@ -109,14 +109,17 @@
                                     <hr />
                                     <ul class="list-group">
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
+                                            <img alt="Product image" src="https://crazycoolgadgets.com/wp-content/uploads/2016/10/Product-Review-Blog.jpg" width="50" height="50" />
                                             Item #1
                                             <span class="badge badge-primary badge-pill">14</span>
                                         </li>
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
+                                            <img alt="Product image" src="https://crazycoolgadgets.com/wp-content/uploads/2016/10/Product-Review-Blog.jpg" width="50" height="50" />
                                             Item #2
                                             <span class="badge badge-primary badge-pill">2</span>
                                         </li>
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
+                                            <img alt="Product image" src="https://crazycoolgadgets.com/wp-content/uploads/2016/10/Product-Review-Blog.jpg" width="50" height="50" />
                                             Item #3
                                             <span class="badge badge-primary badge-pill">1</span>
                                         </li>
@@ -130,17 +133,29 @@
                             </h3>
                             <br />
                             <hr />
-                            <address>
+
+                            <div class="card" style="width: 100%;">
+                                <div class="card-body">
+                                    <h5 class="card-title">Twitter, Inc</h5>
+                                    <p class="card-text">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
+                                    <abbr title="Phone">Phone:</abbr> (123) 456-7890
+                                    <br />
+                                    <br />
+                                    <a href="#" class="btn btn-primary">Change</a>
+                                </div>
+                            </div>
+                            <br />
+                            @*<address>
                                 <strong>Twitter, Inc.</strong><br /> 795 Folsom Ave, Suite 600<br /> San Francisco, CA 94107<br /> <abbr title="Phone">P:</abbr> (123) 456-7890
-                            </address>
+                            </address>*@
                             <ul class="list-group">
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                     Shipping cost: 50 kr
-                                    
+
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                     Extra cost: 29 kr
-                                    
+
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                     Order cost: 1550 kr
