--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -55,7 +55,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="customerOrderHistoryTable">
                 <tr>
                     <td>
                         S123456789
