--- a/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
@@ -72,8 +72,6 @@
         </tbody>
     </table>
 </div>
-</div>
-
 
 
 <!-- Button trigger modal -->
@@ -83,7 +81,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered" style="max-width: 1000px" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Order #placeholder-OrderID</h5>
@@ -92,41 +90,46 @@
                 </button>
             </div>
             <div class="modal-body">
-                @*// Layout*@
                 <div class="container-fluid">
                     <div class="row">
+                        @*Left side*@
                         <div class="col-md-6">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h3>
-                                        Purchased products
-                                    </h3>
-                                    <hr />
-                                    <ul class="list-group">
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <img alt="Product image" src="https://crazycoolgadgets.com/wp-content/uploads/2016/10/Product-Review-Blog.jpg" width="50" height="50" />
-                                            Item #1
-                                            <span class="badge badge-primary badge-pill">14</span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <img alt="Product image" src="https://crazycoolgadgets.com/wp-content/uploads/2016/10/Product-Review-Blog.jpg" width="50" height="50" />
-                                            Item #2
-                                            <span class="badge badge-primary badge-pill">2</span>
-                                        </li>
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <img alt="Product image" src="https://crazycoolgadgets.com/wp-content/uploads/2016/10/Product-Review-Blog.jpg" width="50" height="50" />
-                                            Item #3
-                                            <span class="badge badge-primary badge-pill">1</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                            <h3 class="d-flex justify-content-between align-items-center mb-3">
+                                Purchased products
+                                <span class="badge bg-primary rounded-pill">3</span>
+                            </h3>
+                            <hr />
+
+                            <ul class="list-group mb-3">
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">Product name</h6>
+                                        <small class="text-muted">Brief description</small>
+                                    </div>
+                                    <span class="text-muted">$12</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">Second product</h6>
+                                        <small class="text-muted">Brief description</small>
+                                    </div>
+                                    <span class="text-muted">$8</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">Third item</h6>
+                                        <small class="text-muted">Brief description</small>
+                                    </div>
+                                    <span class="text-muted">$5</span>
+                                </li>
+                            </ul>
+
                         </div>
+                        @*Right Side*@
                         <div class="col-md-6">
                             <h3>
-                                Details
+                                Order Details
                             </h3>
-                            <br />
                             <hr />
 
                             <div class="card" style="width: 100%;">
@@ -141,24 +144,27 @@
                             </div>
                             <br />
                             <ul class="list-group">
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Shipping cost: 50 kr
-
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <h6 class="my-0">Shipping cost:</h6>
+                                    <span class="text-muted">50 kr</span>
                                 </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Extra cost: 29 kr
-
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <h6 class="my-0">Extra cost:</h6>
+                                    <span class="text-muted">29 kr</span>
                                 </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Order cost: 1550 kr
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <h6 class="my-0">Order cost:</h6>
+                                    <span class="text-muted">1550 kr</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between bg-light"></li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                    <span>Total (SEK)</span>
+                                    <strong>1629 kr</strong>
                                 </li>
                             </ul>
-
-                            <p class="font-weight-bold">Total cost: 1629 kr</p>
                         </div>
                     </div>
                 </div>
-                @*//layout end*@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
