--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link nav-item" asp-area="" asp-controller="Product" asp-action="index">Product</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contacts</a></li>
 
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 nav-item">
                         <input type="search" class="form-control form-control-dark" placeholder="Search...">
@@ -53,19 +53,19 @@
                     <ul>
                         <li class="p-b-10">
                             <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                Track Order
+                                Services
                             </a>
                         </li>
 
                         <li class="p-b-10">
                             <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                Returns
+                                Shipping and Delivery
                             </a>
                         </li>
 
                         <li class="p-b-10">
                             <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                Shipping
+                                Careers
                             </a>
                         </li>
 
@@ -83,7 +83,7 @@
                     </h4>
 
                     <p class="stext-107 cl7 size-201">
-                        Please dont contact us, unless you've bought atleast 200 of our products
+                        Please dont contact us, unless you've bought atleast 200 of our products "hare gott haaaajjjj"
                     </p>
 
                     <div class="p-t-27">
