--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">
                 <!-- Logo Image -->
-                <img src="Image/Deckel-Shop-Logo.png" width="80" height="80" alt="" class="d-inline-block align-middle mr-2">
+                <img src="~/Image/Deckel-Shop-Logo.png" width="80" height="80" alt="" class="d-inline-block align-middle mr-2">
             </a>
 
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
