--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             bottom: 0;
             left: 0;
             right: 0;
-            padding-bottom: 50px;
+            padding: 50px;
         }
 
         .overlay-image {
