--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -18,6 +18,10 @@
             border-radius: 5px;
             padding: 20px;
         }
+        
+        .container main {
+            margin-top: 100px;
+        }
 
         .container-sm {
             height: 70px;
