--- a/Deckel-Shop/Views/Home/Careers.cshtml
+++ b/Deckel-Shop/Views/Home/Careers.cshtml
@@ -9,6 +9,8 @@
     }
 </style>
 
+
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
@@ -97,8 +99,10 @@
     </div>
 </div>
 
+
+
 <!-- The Modal -->
-<div class="modal" id="myModal">
+<div class="modal" id="myModal" role="dialog">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
 
@@ -109,19 +113,22 @@
             </div>
 
             <!-- Modal body -->
-           
-            <div class="modal-dialog modal-dialog-centered " style="max-width: 1000px" role="document">
-                <div class="modal-dialog modal-dialog-centered">
 
-                    <form class="needs-validation" novalidate>
+            <div class="modal-body" style="max-width:auto" role="dialog">
+                <div class="modal-content">
+
+
+                    <form class="needs-validation" novalidate method="post">
+
                         <div class="form-row">
                             <div class="form-row">
-                                <label for="firstName" class="form-label">First name</label>
+                                <label name="firstName" class="form-label">First name</label>
                                 <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
                                 <div class="invalid-feedback">
                                     Valid first name is required.
                                 </div>
                             </div>
+                           
 
                             <div class="form-row">
                                 <label for="lastName" class="form-label">Last name</label>
@@ -130,45 +137,43 @@
                                     Valid last name is required.
                                 </div>
                             </div>
-                            </div>
+                        </div>
 
-                            <div class="form-row">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                                <div class="invalid-feedback">
-                                    Please enter a valid email address.
-                                </div>
+                        <div class="form-row">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                            <div class="invalid-feedback">
+                                Please enter a valid email address.
                             </div>
+                        </div>
 
-                            <div class="form-row">
-                                <label for="phoneNumber" class="form-label">Phone number</label>
-                                <input type="number" class="form-control" id="phonenumber" placeholder="">
-                                <div class="invalid-feedback">
-                                    Please enter a valid phone number
-                                </div>
+                        <div class="form-row">
+                            <label for="phoneNumber" class="form-label">Phone number</label>
+                            <input type="number" class="form-control" id="phonenumber" placeholder="">
+                            <div class="invalid-feedback">
+                                Please enter a valid phone number
                             </div>
+                        </div>
 
-                            <div class="form-row">
-                                <label for="aboutYourself" class="form-label">About yourself</label>
-                                <br>
-                                <textarea rows="5" cols="60" name="description">
+                        <div class="form-row">
+                            <label for="aboutYourself" class="form-label">About yourself</label>
+                            <br>
+                            <textarea rows="5" cols="60" name="description">
                                     
-                                  </textarea><br>
+                            </textarea><br>
+                        </div>
 
-
+                        <div class="form-row">
+                            <div class="col-md-6 mr-auto">
+                                <form action="/action_page.php">
+                                    <label for="upload" class="form-label">Upload your resume</label>
+                                    <input type="file" id="myFile" name="filename" m>
+                                    <label for="upload" class="form-label"></label>
+                                </form>
                             </div>
+                        </div>
+                        <hr class="my-4">
 
-                            <div class="form-row">
-                                <div class="col-md-6 mr-auto">
-                                    <form action="/action_page.php">
-                                        <label for="upload" class="form-label">Upload your resume</label>
-                                        <input type="file" id="myFile" name="filename" m>
-                                        <label for="upload" class="form-label"></label>
-                                    </form>
-                                </div>
-                            </div>
-                            <hr class="my-4">
-                            
                     </form>
                 </div>
             </div>
@@ -181,4 +186,5 @@
 
         </div>
     </div>
+
 </div>
