--- a/Deckel-Shop/Views/Home/Careers.cshtml
+++ b/Deckel-Shop/Views/Home/Careers.cshtml
@@ -107,8 +107,8 @@
         <div class="modal-content">
 
             <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Submit your resume</h4>
+            <div class="modal-header" >
+                <h4 class="modal-title" style="margin-left:auto">Submit your resume</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
 
@@ -120,7 +120,7 @@
 
                     <form class="needs-validation" novalidate method="post">
 
-                        <div class="form-row">
+                        <div class="form-text">
                             <div class="form-row">
                                 <label name="firstName" class="form-label">First name</label>
                                 <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
