--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -122,3 +122,22 @@ body {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
+.form-text {
+    display: block;
+    margin-top: 0.25rem;
+    margin-left: 0;
+    width: 50%;
+}
+
+.form-row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0;
+    width: 70%
+}
+
+.needs-validation {
+    margin-left: auto;
+}
