--- a/Deckel-Shop/Views/Cart/Index.cshtml
+++ b/Deckel-Shop/Views/Cart/Index.cshtml
@@ -30,14 +30,55 @@
                                         </div>
                                         <div class="col-md-4 quantity">
                                             <label for="quantity">Quantity:</label>
-                                            <input id="quantity" type="number" value="1" class="form-control quantity-input">
-                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
-                                                <i class="far fa-trash-alt"></i>
-                                            </button>
+                                            <div class="input-group">
+                                                <input id="quantity" type="number" value="1" class="form-control quantity-input">
+                                                <div class="input-group-append">
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                                        <i class="far fa-trash-alt"></i>
+                                                    </button>
+                                                </div>
+                                                <div class="col-md-3 price">
+                                                    <span>$120</span>
+                                                </div>
+                                            </div>
                                         </div>
 
-                                        <div class="col-md-3 price">
-                                            <span>$120</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img class="img-fluid mx-auto d-block image" src="assets/img/image.jpg">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="info">
+                                    <div class="row">
+                                        <div class="col-md-5 product-name">
+                                            <div class="product-name">
+                                                <a href="#">Lorem Ipsum dolor</a>
+                                                <div class="product-info">
+                                                    <div>Display: <span class="value">5 inch</span></div>
+                                                    <div>RAM: <span class="value">4GB</span></div>
+                                                    <div>Memory: <span class="value">32GB</span></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4 quantity">
+                                            <label for="quantity">Quantity:</label>
+                                            <div class="input-group">
+                                                <input id="quantity" type="number" value="1" class="form-control quantity-input">
+                                                <div class="input-group-append">
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                                        <i class="far fa-trash-alt"></i>
+                                                    </button>
+                                                </div>
+                                                <div class="col-md-3 price">
+                                                    <span>$120</span>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -64,46 +105,17 @@
                                         </div>
                                         <div class="col-md-4 quantity">
                                             <label for="quantity">Quantity:</label>
-                                            <input id="quantity" type="number" value="1" class="form-control quantity-input">
-                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
-                                                <i class="far fa-trash-alt"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-md-3 price">
-                                            <span>$120</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <img class="img-fluid mx-auto d-block image" src="assets/img/image.jpg">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="info">
-                                    <div class="row">
-                                        <div class="col-md-5 product-name">
-                                            <div class="product-name">
-                                                <a href="#">Lorem Ipsum dolor</a>
-                                                <div class="product-info">
-                                                    <div>Display: <span class="value">5 inch</span></div>
-                                                    <div>RAM: <span class="value">4GB</span></div>
-                                                    <div>Memory: <span class="value">32GB</span></div>
+                                            <div class="input-group">
+                                                <input id="quantity" type="number" value="1" class="form-control quantity-input">
+                                                <div class="input-group-append">
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                                        <i class="far fa-trash-alt"></i>
+                                                    </button>
+                                                </div>
+                                                <div class="col-md-3 price">
+                                                    <span>$120</span>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-md-4 quantity">
-                                            <label for="quantity">Quantity:</label>
-                                            <input id="quantity" type="number" value="1" class="form-control quantity-input">
-                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
-                                                <i class="far fa-trash-alt"></i>
-                                            </button>
-                                        </div>
-                                        <div class="col-md-3 price">
-                                            <span>$120</span>
                                         </div>
                                     </div>
                                 </div>
